<resources>
    <string name="app_name">wanderwave</string>
    <string name="upper_case_app_name">Wanderwave</string>

    <string name="milestone_number">Milestone 4</string>
    <string name="milestone_date">2024.06.02</string>

    <string name="welcome_title">Welcome</string>
    <string name="welcome_subtitle">Ready to discover new music?</string>
    <string name="button_label">Sign-in with Spotify</string>

    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="trackList">Track List</string>


    <string name="hexagon">Hexagon</string>
    <string name="developed_by">Developed by</string>
    <string name="permission_request_title">Permissions needed</string>
    <string name="permission_request_text_location">In order to provide a full experience, Wanderwave needs access to this device\'s precise location. Please enable location permissions in the next window.</string>
    <string name="permission_request_confirm_button">I understand</string>
    <string name="beaconTitle">Beacon</string>
    <string name="beaconLocation">at %1$s</string>
    <string name="beaconTracksTitle">Tracks</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="deleteProfile">Delete Profile</string>
    <string name="about">About</string>
    <string name="signOut">Sign Out</string>
    <string name="showChosenSongs">Show CHOSEN SONGS</string>
    <string name="showLikedSongs">Show LIKED SONGS</string>

    <string name="next">Next > </string>
    <string name="previous"> &lt; Previous</string>
    <string name="search_tracks">Search Tracks</string>
    <string name="show_recently_added">Show Recently Added</string>
    <string name="recently_played_tracks">Played Tracks</string>
    <string name="recently_added_tracks">Retrieved Tracks</string>
    <string name="liked_tracks">Liked Tracks</string>
    <string name="banned_tracks">Banned Tracks</string>
    <string name="recently_viewed_tracks">Recently Viewed Tracks</string>

</resources>