...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween) {
          if (title != null) {
            Text(
                text = title,
                style = MaterialTheme.typography.headlineMedium,
                modifier = Modifier.testTag("trackListTitle"))
          }
          if (canAddSong) {
            IconButton(
                onClick = {
                  navActions.navigateToSelectSongScreen(viewModelName)
                }) { // Toggle dialog visibility
...
